--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ p {
 a {
     color: #006d77;
 }
+iframe {
+  width: 560px;
+  height: 315px;
+}
 .header-img {
     width: 100%;
     height: 350px;
