--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,25 @@ iframe {
 .header-img {
     width: 100%;
     height: 350px;
-background-image: url("../img/header_ice_s.jpg");
+    background-image: url("../img/header_ice_s.jpg");
 /* Source:<span>Photo by <a href="https://unsplash.com/@ghost_cat?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Danielle Barnes</a> on <a href="https://unsplash.com/s/photos/penguins?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span> */
     background-size: cover;
     opacity: 0.6;
-  }
+    position: relative;
+}
+header h1 {
+    font-size: 64px;
+    letter-spacing: 20px;
+    color: white;
+    line-height: 350px;
+    position: absolute;
+    margin: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    text-align: center;
+    background: rgba(0,0,0,0.45);
+}
 main {
     background: #edf6f9;
     padding: 10px 45px;
